--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -226,23 +226,6 @@
   }
 }
 
-.profile-widget-header {
-  align-items: center;
-  display: flex;
-
-  &:focus,
-  &:hover {
-    .profile-widget-subtitle {
-      display: flex;
-    }
-  }
-}
-
-.profile-widget-subtitle {
-  display: none;
-  padding: 0 .5rem;
-}
-
 .web3-section-title {
   font-size: .9rem;
   font-weight: 500;
@@ -419,6 +402,22 @@
         transition: opacity .2s ease-in-out;
         position: relative;
       }
+    }
+
+    .profile-widget-header {
+      align-items: center;
+      display: flex;
+    }
+    
+    .profile-widget-footer {
+      background: $light-color;
+      border-radius: .5rem;
+      bottom: .25rem;
+      color: $gray-color;
+      font-size: .6rem;
+      padding: .25rem .5rem;
+      position: absolute;
+      right: 1rem;
     }
 
     .profile-widget-title {
