--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -955,9 +955,9 @@
       display: flex;
       flex-wrap: nowrap;
       gap: .5rem;
-      margin: 0 -1rem;
+      margin: -1rem;
       overflow-x: auto;
-      padding: 0 1rem;
+      padding: 1rem;
 
       .rss-website {
         border-radius: .4rem;
@@ -980,7 +980,9 @@
 
       .rss-item {
         background: lighten($bg-color, 5%);
-        border-radius: .4rem;
+        border: .05rem solid rgba($dark-color, .025);
+        border-radius: .6rem;
+        box-shadow: 0 .1rem .4rem rgba($dark-color, .04);
         cursor: pointer;
         flex: 0 0 12rem;
         min-height: 5rem;
@@ -991,7 +993,9 @@
 
         &:focus,
         &:hover {
-          background: lighten($bg-color, 2%);
+          background: lighten($bg-color, 4%);
+          box-shadow: 0 .2rem .8rem rgba($dark-color, .075);
+          z-index: 99;
         }
 
         .rss-item-title {
@@ -1015,7 +1019,9 @@
           margin-bottom: .25rem;
 
           .label {
+            background: transparent;
             border-radius: .35rem;
+            padding: 0;
           }
         }
 
